tests/ui/ferrocene/compiler-arguments/upper_f/upper-f_upper-a.stderr
error: missing documentation for the crate
  --> $DIR/upper-f_upper-a.rs:7:1
   |
LL | fn main() {}
   | ^^^^^^^^^^^^
   |
   = note: requested on the command line with `-F missing-docs`

error: aborting due to previous error

